objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address line 1</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address line 2</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <description>Info about candidate from VTS via integration</description>
        <label>Address Line 3</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Client Candidate ID</description>
        <externalId>true</externalId>
        <label>CCID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Candidate_ID__c</fullName>
        <label>Candidate ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Account is not a Client.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Field populated via API, this is the non-abbreviated name of the country</description>
        <label>Country Name</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Candidate middle name.  coming from VTS via integration</description>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Country_Code__c</fullName>
        <label>Phone country code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <description>Field retrieved via API call.  this is the non-abbreviated name of the state</description>
        <label>State Name</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <externalId>true</externalId>
        <label>Student ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTS_Candidate_ID_FRMLA__c</fullName>
        <formula>Text(VTS_Candidate_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VTS Candidate ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTS_Candidate_ID__c</fullName>
        <externalId>true</externalId>
        <label>VTS candidate ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>